--- a/_theme_files/saved-properties.html
+++ b/_theme_files/saved-properties.html
@@ -387,9 +387,9 @@
               </div>
 
               <div
-                class="flex justify-center gap-4 text-green-900 text-sm mb-4"
+                class="flex justify-center gap-4 text-green-900 text-sm mb-4
               >
-                <p><i class="fa-solid fa-money-bill"></i> Nightly</p>
+                <p><i class="fa-solid fa-money-bill"></i> Nightly</p>"
                 <p><i class="fa-solid fa-money-bill"></i> Weekly</p>
                 <p><i class="fa-solid fa-money-bill"></i> Monthly</p>
               </div>
